--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://istros.eu/'
+baseURL = 'https://istros-eu.github.io/website/'
 languageCode = 'en-us'
 title = 'Istros NGO'
 theme = 'PaperMod'
