--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://istros.eu/'
 defaultContentLanguage = 'sk'
-defaultContentLanguageInSubdir = true
+defaultContentLanguageInSubdir = false
 theme = 'ananke'
 
 [params]
