Fix multilingual navigation issues
- Disable recent posts to prevent cross-language content mixing
- Create custom home.html template with language filtering
- Update site-navigation.html to use language-aware site context
- Configure ananke.show_recent_posts = false

Issues remaining:
- Header title and menu still showing Slovak on EN/EL pages (WIP)

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,9 @@ theme = 'ananke'
   site_logo = ""
   background_color_class = "bg-black"
   recent_posts_number = 3
+  
+  [params.ananke]
+    show_recent_posts = false
 
 [languages]
   [languages.sk]
