Add language-specific logos to homepages
- Add logo files in three versions: logo-sk.jpeg, logo-en.jpeg, logo-gr.jpeg
- Store logos in both assets/ and static/ directories
- Update all three homepage _index.md files to display logo next to main heading
- Configure Hugo to allow unsafe HTML in markdown (markup.goldmark.renderer.unsafe = true)
- Logos appear in a flex layout next to the welcome heading

Layout:
- Logo displayed at max-width 200px with auto height
- Positioned to the left of the main heading text
- Responsive with flex-wrap for mobile devices

Each language homepage now shows its respective logo:
- Slovak: logo-sk.jpeg
- English: logo-en.jpeg
- Greek: logo-gr.jpeg

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,11 @@ defaultContentLanguage = 'sk'
 defaultContentLanguageInSubdir = false
 theme = 'ananke'
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 [params]
   author = "istros.eu"
   favicon = ""
